--- a/Udemy.BankApp.Web/Views/Account/Create.cshtml
+++ b/Udemy.BankApp.Web/Views/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ApplicationUser
+﻿@model UserListModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -12,6 +12,19 @@
 
     </div>
     <div class="col-6">
-        <h4>Ekleme İşlemi</h4>
+        <form method="post" asp-action="Create" asp-controller="Account">
+            <input type="hidden" name="ApplicationUserId" value="@Model.Id" />
+            <div class="mb-3">
+                <label class="form-label">Hesap Numarası</label>
+                <input type="number" class="form-control" name="AccountNumber" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Bakiye</label>
+                <input type="number" class="form-control" name="Balance" />
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-primary">Kaydet</button>
+            </div>
+        </form>
     </div>
 </div>
