--- a/Udemy.BankApp.Web/Views/Home/Index.cshtml
+++ b/Udemy.BankApp.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ApplicationUser>
+﻿@model List<UserListModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -20,6 +20,7 @@
                 <td><getAccountCount application-user-id="@item.Id"></getAccountCount></td>
                 <td>
                     <a asp-action="Create" asp-controller="Account" asp-route-id="@item.Id">Create New Account</a>
+                    <a asp-action="GetByUserId" asp-controller="Account" asp-route-userId="@item.Id">GetAccounts</a>
                 </td>
             </tr>
         }
